[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Custom_Fonts/cardLabel.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/MainManuUi/DeckMenu/CardViewer/CardEditor/CardEditorPanel.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="CardEditorPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 360.0
margin_bottom = 640.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 1080.0
margin_bottom = 267.0
custom_fonts/font = ExtResource( 1 )
text = "Edit a Card"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_right = 154.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 1 )
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckTypeDropDown" type="OptionButton" parent="."]
margin_left = 140.0
margin_top = 300.0
margin_right = 940.0
margin_bottom = 450.0
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
text = "Choose a Card Type"
align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NormalCardInfoContainer" type="Control" parent="."]
visible = false
margin_top = 550.0
margin_right = 1080.0
margin_bottom = 1620.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NormalCardTextEdit" type="TextEdit" parent="NormalCardInfoContainer"]
margin_left = 65.0
margin_top = 100.0
margin_right = 1015.0
margin_bottom = 1000.0
custom_fonts/font = ExtResource( 1 )
text = "



Enter your custom card text here."
context_menu_enabled = false
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseCardInfoContainer" type="Control" parent="."]
margin_top = 550.0
margin_right = 1080.0
margin_bottom = 1620.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseCardOptionA" type="TextEdit" parent="ChooseCardInfoContainer"]
margin_left = 65.0
margin_top = 100.0
margin_right = 1015.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 1 )
text = "The first option."
context_menu_enabled = false
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseCardOptionB" type="TextEdit" parent="ChooseCardInfoContainer"]
margin_left = 65.0
margin_top = 615.0
margin_right = 1015.0
margin_bottom = 965.0
custom_fonts/font = ExtResource( 1 )
text = "The second option."
context_menu_enabled = false
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 1760.0
margin_right = 840.0
margin_bottom = 1860.0
custom_fonts/font = ExtResource( 1 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackButton" to="." method="on_back_button_pressed"]
[connection signal="item_selected" from="DeckTypeDropDown" to="." method="on_drop_down_changed"]
[connection signal="pressed" from="ConfirmButton" to="." method="on_confirm_card"]
